<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashActivityAston">

    <TextView
        android:id="@+id/tv_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrance"
        android:textColor="?attr/DefaultTextColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        app:layout_constraintGuide_percent="0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/barrier_right"
        app:layout_constraintStart_toStartOf="@+id/barrier_left"
        app:layout_constraintTop_toBottomOf="@+id/guideline_top">

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/barrier_right"
        app:layout_constraintStart_toStartOf="@+id/barrier_left"
        app:layout_constraintTop_toBottomOf="@+id/til_login"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        app:layout_constraintGuide_percent="0.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter"
        style="@style/LoginFragmentEnterButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/enter"
        app:backgroundTint="@color/aston_primary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/barrier_right"
        app:layout_constraintStart_toStartOf="@id/barrier_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="start"
        android:layout_margin="12dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="end"
        android:layout_margin="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>